snippets/Nemerle.Statechart/Tests/testsuite/negative/join_transitions_must_have_same_trigger.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

  [statechart(<#

  flags testing auto_initial;
  //flags debug;
  
  name "join transition must have same trigger";
  
  state A
  {
    a => B;
  }

  join j1 => A; // E: Transitions targeting join \[TransitionEToJoinj1Bya, TransitionDToJoinj1Byb\] must have same event trigger
  
  region B
  {
    state E
    {
      a => j1;
    }
    
  } and
  {
    
    state D
    {
      b => j1;
    }
    
  }
  
  #>)]
  public class example
  {
  }

  
